# ave_test

./: AVE_HR_BOT_RECOMENDATIONS.md  README.md  pyproject.toml  start.sh
.github/workflows/: python-package.yml
ave_test/: bootstrap.py  config.py  main.py
ave_test/adapters/: __init__.py  redis_repo.py
ave_test/app/services/: __init__.py  phone_address_service.py
ave_test/domain/: __init__.py  errors.py
ave_test/domain/entities/: __init__.py  phone_address_relation.py
ave_test/domain/ports/: __init__.py  phone_address_repo.py
ave_test/domain/value_objects/: __init__.py  address.py  phone.py
ave_test/interface/http/: controller.py  dto.py
deployment/: Dockerfile  docker-compose.yml  logconfig.conf
tests/: conftest.py  test_phone_address.py
